--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,11 @@
 @import "./fonts.css";
 
+/* Admin panel */
+@import "./admin/header--admin.css";
+@import "./admin/aside--admin.css";
+@import "./admin/history--admin.css";
+@import "./admin/table--admin.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +13,14 @@
 @layer base {
     * {
         box-sizing: border-box;
+    }
+
+    body {
+        @apply bg-[#F7F8FC] dark:bg-[#0E0E10];
+    }
+
+    svg {
+        display: inline;
     }
 
     .primary-font {
@@ -33,7 +47,8 @@
         font-size: 350px;
     }
 
-    svg {
-        display: inline;
+    .btn-close {
+        background: url("data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22 fill=%22%23000%22%3E%3Cpath d=%22M.293.293a1 1 0 011.414.0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293A1 1 0 01.293 14.293L6.586 8 .293 1.707a1 1 0 010-1.414z%22/%3E%3C/svg%3E")
+            50%/1em no-repeat;
     }
 }
